<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@android:color/holo_blue_light" />

    <!--下面button-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">

            <Button
                android:id="@+id/btnAccCali"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_light"
                android:onClick="onClickAccCali"
                android:text="@string/AccCali"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btnAccCaliL"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_light"
                android:onClick="onClickAccCaliL"
                android:text="@string/AccCaliL"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btnAccCaliR"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_light"
                android:onClick="onClickAccCaliR"
                android:text="@string/AccCaliR"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btnMagCali"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_light"
                android:onClick="onClickMagCali"
                android:text="@string/MagCali"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">

            <Button
                android:id="@+id/btnD0"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_light"
                android:onClick="onClickAccCali"
                android:text="D0"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btnD1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_light"
                android:onClick="onClickAccCaliL"
                android:text="D1"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btnD2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_light"
                android:onClick="onClickAccCaliR"
                android:text="D2"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btnD3"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_light"
                android:onClick="onClickMagCali"
                android:text="D3"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">

            <Button
                android:id="@+id/btnRate"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_light"
                android:text="@string/Rate"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_light"
                android:onClick="onClickSave"
                android:text="@string/Save"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btnReset"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_light"
                android:onClick="onClickReset"
                android:text="@string/Resume"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@android:color/holo_blue_light" />
    </LinearLayout>
</LinearLayout>