<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DeviceControlActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="@color/accent_1" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/accent_1">

            <TextView
                android:id="@+id/tv_set"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:background="@drawable/icon_musen" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="WT901BLE"
                android:textColor="@color/colorTextPrimary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_record"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:alpha="0.6"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/Record"
                android:textColor="@color/colorTextPrimary"
                android:textSize="18sp" />
        </RelativeLayout>

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="45dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnAcc"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/Acc"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btnGyro"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:alpha="0.6"
                    android:text="@string/gyr"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btnAngle"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:alpha="0.6"
                    android:text="@string/Angle"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btnMag"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:alpha="0.6"
                    android:text="@string/Mag"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btnPressure"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:alpha="0.6"
                    android:text="@string/Pressure"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btnPort"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:alpha="0.6"
                    android:text="@string/Port"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btnQuater"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:alpha="0.6"
                    android:text="@string/Quater"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

            </LinearLayout>
        </HorizontalScrollView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_nameId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="ID:"
                android:textColor="@color/tv333333"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textColor="@color/tv333333"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="EQ:"
                android:textColor="@color/tv333333"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_cell"
                android:layout_width="30dp"
                android:layout_height="15dp"
                android:layout_margin="10dp" />


        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v4.view.ViewPager
                android:id="@+id/mViewPager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone" />


            <LinearLayout
                android:id="@+id/mLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/lineChart"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginBottom="20dp"
                    android:padding="10dp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@android:color/darker_gray"></View>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp">

                        <TextView
                            android:id="@+id/tvTittleX"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:text="X:"
                            android:textSize="18sp" />

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="@android:color/darker_gray" />

                        <TextView
                            android:id="@+id/tvX"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginRight="15sp"
                            android:layout_weight="1"
                            android:gravity="right|center"
                            android:text="0.0"
                            android:textSize="18sp" />
                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp">

                    <TextView
                        android:id="@+id/tvTittleY"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="Y:"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/tvY"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="15sp"
                        android:layout_weight="1"
                        android:gravity="right|center"
                        android:text="0.0"
                        android:textSize="18sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp">

                    <TextView
                        android:id="@+id/tvTittleZ"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="Z:"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/tvZ"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="15sp"
                        android:layout_weight="1"
                        android:gravity="right|center"
                        android:text="0.0"
                        android:textSize="18sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp">

                    <TextView
                        android:id="@+id/tvTittleAll"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="All:"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/tvAll"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="15sp"
                        android:layout_weight="1"
                        android:gravity="right|center"
                        android:text="0.0"
                        android:textSize="18sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@android:color/darker_gray"></View>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nv_layout"
        android:layout_width="180dp"
        android:layout_height="match_parent"
        android:layout_gravity="start">

        <include layout="@layout/lay_dar_left"></include>

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>